Loading and Minimap
-You can now load graphs using .asset files which are created by the save system
-There is a minimap element which shows the state of the graph for navigation purposes
-I created a test graph to showcase the saving and loading system.

--- a/Assets/Editor Default Resources/DialogueSystem/DSToolbarStyles.uss
+++ b/Assets/Editor Default Resources/DialogueSystem/DSToolbarStyles.uss
@@ -58,3 +58,8 @@ TextField:focus > .unity-text-field__label
 {
     color: var(--ds-colors-window-yellow);
 }
+
+.ds-toolbar_button_selected
+{
+    color: var(--ds-colors-window-yellow);
+}
